<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBase"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nomeApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="60dp"
                android:gravity="center"
                android:text="@string/surfbuddy"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/preto"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/usuario"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@+id/nomeApp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />


            <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/caixa"
                android:hint="@string/usuario"
                android:textAlignment="center"
                android:textColorHint="@color/themeCinzaHidden"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/senha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nomeApp"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/caixa"
                android:hint="@string/senha"
                android:textAlignment="center"
                android:textColorHint="@color/themeCinzaHidden"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usuario" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="110dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/botao_padrao"
                android:text="@string/entrar"
                android:textColor="@color/themeCinza"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/senha" />

            <TextView
                android:id="@+id/esqueceu_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:padding="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/esqueceu_a_senha"
                android:textAlignment="center"
                android:textColor="@color/themeCinza"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>