<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBase"
    tools:context=".Inicial">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="54dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/nomeApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/surfbuddy"
                android:textColor="@color/preto"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/alunos_txt"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/ic_alunos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/professores_txt"
                app:layout_constraintTop_toBottomOf="@+id/aulas"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendario"
                android:textColor="@color/preto"
                app:layout_constraintEnd_toEndOf="@+id/calendario_txt"
                app:layout_constraintStart_toStartOf="@+id/calendario_txt"
                app:layout_constraintTop_toBottomOf="@+id/calendario_txt" />


            <ImageView
                android:id="@+id/aulas"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_aulas"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/calendario_txt"
                app:layout_constraintTop_toBottomOf="@+id/nomeApp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aulas"
                android:textColor="@color/preto"
                app:layout_constraintEnd_toEndOf="@+id/aulas"
                app:layout_constraintStart_toStartOf="@+id/aulas"
                app:layout_constraintTop_toBottomOf="@+id/aulas" />

            <ImageView
                android:id="@+id/calendario_txt"
                android:layout_width="70dp"
                android:layout_height="67dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_calendario"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/aulas"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nomeApp"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professores"
                android:textColor="@color/preto"
                app:layout_constraintEnd_toEndOf="@+id/professores_txt"
                app:layout_constraintStart_toStartOf="@+id/professores_txt"
                app:layout_constraintTop_toBottomOf="@+id/professores_txt" />

            <ImageView
                android:id="@+id/professores_txt"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/ic_professores"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/alunos_txt"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendario_txt"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alunos"
                android:textColor="@color/preto"
                app:layout_constraintEnd_toEndOf="@+id/alunos_txt"
                app:layout_constraintStart_toStartOf="@+id/alunos_txt"
                app:layout_constraintTop_toBottomOf="@+id/alunos_txt" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>